--- a/projects/2018-05-21-자료구조_Graph.md
+++ b/projects/2018-05-21-자료구조_Graph.md
@@ -169,7 +169,7 @@ public class Graph {
 
 
 
-Test 처럼 버텍스와 버텍스를 연결시켜주고 삭제시켜주다보면 다음과 같이 결과를 출력받을 수 있다.
+Test 처럼 버텍스와 버텍스를 연결시켜주고 삭제시켜주다보면 다음과 같이 결과를 출력받을 수 있다.2
 
 
 ![친절한 스크린샷]({{ site.url }}/assets/img/algorithm_grpah.PNG)
