--- a/_posts/2019-12-10-리뉴얼_Graph.md
+++ b/_posts/2019-12-10-리뉴얼_Graph.md
@@ -2,7 +2,7 @@
 layout: project
 title: "2020년 리뉴얼!"
 date: 2019-12-10
-excerpt: "Graph"
+excerpt: "2020년부터 새롭게 리뉴얼되는 페이지를 만나보세요"
 tags: [자료구조, graph, codes]
 comments: true
 ---
