--- a/_posts/2018-05-21-자료구조_Graph.md
+++ b/_posts/2018-05-21-자료구조_Graph.md
@@ -19,7 +19,7 @@ markdown으로 그림파일을 넣는것이 아직 익숙하지 않기 때문에
 
 다음의 소스코드에서는 그래프 상에서 버텍스와 버텍스를 아크로 잇고 삭제하는 기능을 수행하는 프로그램의 예시이다.
 
-언어는 java이다.
+언어는 java이다. ^^
 
 
 public class TestGraph {
